2025-09-05 Fixed Kaupen Furnace output recipe; Improved Crafting Plus Recipe Category comments and codes.